# shortener-link

./: .env.example  .env.test  .eslintrc.cjs  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  index.html  manifest  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  prompt.txt  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/agents/: backend-engineer.md  designer.md  frontend-engineer.md  product-manager.md  qa-engineer.md  system-architect.md  ux-researcher.md
backend/: Cargo.toml
backend/migrations/: 0001_init.sql
backend/src/: config.rs  db.rs  error.rs  ids.rs  lib.rs  main.rs  models.rs  queue.rs  seed.rs  state.rs
backend/src/auth/: extractor.rs  jwt.rs  mod.rs  oauth.rs  password.rs
backend/src/routes/: analytics.rs  guest.rs  health.rs  links.rs  mod.rs  qr.rs  redirect.rs  spa.rs
backend/src/services/: alias.rs  analytics.rs  blocklist.rs  cache.rs  clicker_pages.rs  geo.rs  links.rs  mod.rs  qr.rs  ratelimit.rs  redirect.rs  referrer.rs  reserved.rs  serialize.rs  shortcode.rs  ssrf.rs  ua.rs  unlock.rs  utm.rs  validation.rs
backend/src/tasks/: click_ingest.rs  mod.rs  scraper.rs  sweep.rs
backend/tests/: api.rs
data/: .gitignore  blocklist.txt
prisma/: schema.prisma  seed.ts
scripts/: e2e-server.sh  fetch-geoip.mjs  journey-smoke.mjs  start.sh  validate-pipeline.mjs
src/: globals.css  main.tsx  middleware.ts  router.tsx
src/app/: page.tsx  (+2 more)
(+154 files in other folders)
